# vehicle-tracker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  dev.sh  docker-compose.custom.yml  docker-compose.deepstream.yml  docker-compose.dev.yml  docker-compose.label-studio.yml  docker-compose.training.yml  prd.md  pyproject.toml  vehicle_tracker_design.md
backend/: Dockerfile  Dockerfile.custom  Dockerfile.deepstream  main.py  requirements.custom.txt  requirements.txt
docs/: changelog.md  design.md  m6-spike-results.md  m7-custom-pipeline-prd.md  m7-design.md  prd.md
experiments/: exp01_detection.py  exp01_results.md  exp02_results.md  exp02_tracking.py  exp03_frame_buffer.py  exp03_results.md  exp04_interval.py  exp04_results.md  exp05_60fps.py  exp05_results.md  exp06_async_pipeline.py  exp06_results.md  exp07_exp08_results.md  exp07_multi_source.py  exp08_batch_routing.py  exp08b_stall_debug.py  exp08c_demux.py  exp09_custom_decode.py  exp09_results.md  exp10_results.md  exp11_e2e_pipeline.py  exp11_results.md  exp12_gpu_resident.py  exp12_results.md  exp13_jpeg_encode.py  exp13_results.md  exp14_hls_decode.py  exp14_results.md  exp14b_hls_fifo.py  exp14c_gst_fifo_nvdec.py  exp15_resource_comparison.py  exp15_results.md  exp_e2e_fps.py  exp_perf_audit.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
plans/: m1-deepstream-single-channel.md  m2-api-layer.md  m3-react-ui.md  m4-deepstream-fastapi-integration.md  m5-multi-channel.md  m6-youtube-live.md  m7-custom-pipeline.md  (+1 more)
(+150 files in other folders)
